--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -163,6 +163,8 @@
   </script>
 
   {{ content_for_header }}
+
+	{% include 'vitals-loader' %}
 {% if template == 'product' and product.metafields.inventory.ShappifyHidden or product.type contains '_HIDDEN_' %}<meta name='robots' content='noindex'>{% endif %}
 {%- render 'bold-options-hybrid' -%}
 {%- render 'bold-common' -%}
