--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -198,5 +198,9 @@
     <li id="a11y-refresh-page-message">{{ 'general.accessibility.refresh_page' | t }}</li>
     <li id="a11y-selection-message">{{ 'general.accessibility.selection_help' | t }}</li>
   </ul>
+
+  {{ 'jquery-3.5.1.min.js' | asset_url | script_tag }}
+  {{ 'custom.js' | asset_url | script_tag }}
+  {{ 'custom.css' | asset_url | stylesheet_tag }}
 </body>
 </html>
